Kubernetes/django_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: taskmanager-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: mustafa3li/backend:v1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 5000
